2000-09-11  Lauris Kaplinski  <lauris@helixcode.com>

	* e-font.c: Try to find real bold variant of X font, fall
	to double stroke only if not found

2000-09-10  Ettore Perazzoli  <ettore@helixcode.com>

	* e-gtk-utils.c: New.
	(e_gtk_signal_connect_full_while_alive): New.

	* e-gtk-utils.h: New.

2000-09-08  Lauris Kaplinski  <lauris@helixcode.com>

	* e-font.c: Use experimental 16-bit font stuff for EFonts

2000-09-08  Dan Winship  <danw@helixcode.com>

	* e-popup-menu.h: remove consts from the EPopupMenu structure: the
	caller may want to modify its own EPopupMenu before calling
	e_popup_menu_run.

2000-09-07  Lauris Kaplinski  <lauris@helixcode.com>

	* e-dialog-widgets.c (e_dialog_editable_get): Use UTF-8
	(e_dialog_editable_set): Use UTF-8

	* e-font.c (translate_encoding): More encodings
	(e_gdk_font_encoding): Use experimental stuff

	* e-unicode.* (e_utf8_gtk_editable_insert_text): New wrapper
	
2000-09-07  Federico Mena Quintero  <federico@helixcode.com>

	* e-canvas.c (emit_event): Remove incorrect optimization.  Events
	are read-only!

2000-09-04  Lauris Kaplinski  <lauris@helixcode.com>

	* e-unicode.c: Added new font code, but comment it out now
	* e-font.h, e-font.c: Test code for font analyzing

2000-09-02  Lauris Kaplinski  <lauris@helixcode.com>

	* e-unicode.h, e-unicode.c: New functions
	e_utf8_gtk_clist_append, e_utf8_gtk_clist_set_text
	e_unicode_init

2000-08-31  Lauris Kaplinski  <lauris@helixcode.com>

	* e-html-utils.c (e_text_to_html): Use UTF-8

	* e-unicode.h:
	* e-unicode.c (g_unichar_to_utf8): glib 1.3 function
	(gdk_keyval_to_unicode): gdk 1.3 function
	(e_utf8_from_gdk_event_key): Use keyval, not string

2000-08-30  Lauris Kaplinski  <lauris@helixcode.com>

	* e-unicode.h: #define gnome_font_get_size and
	gnome_font_get_width, and gnome_font_lookup_default,
	if compiling with gnome-print 0.20

2000-08-30  Dan Winship  <danw@helixcode.com>

	* Makefile.am (libeutil_la_LIBADD): make e-util depend on
	libunicode
