@@ -1,3 +1,8 @@
+2000-09-11  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-unicode.c, e-unicode.h: Added e_utf8_gtk_editable_get_text and
+	e_utf8_gtk_editable_set_text.
+
 2000-09-11  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* e-font.c: Try to find real bold variant of X font, fall
